It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Thu, May 7, 2009
---------------------------------------------------------------------
- Installed [simple_column_search] plugin.

Wed, May 6, 2009
---------------------------------------------------------------------
- Implemented prototype search box for Leads with stubbed controller.

Tue, May 5, 2009
---------------------------------------------------------------------
- Started with live search (LH #22).

Mon, May 4, 2009
---------------------------------------------------------------------
- Last bit of paging refactoring before closing LH #18.

Sun, May 3, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Opportunities.
- Simplified paging by using single proxy to store and retrieve current page.

Sat, May 2, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Contacts.

Fri, May 1, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Campaigns.

Thu, Apr 30, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Accounts.

Wed, Apr 29, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Leads.

Tue, Apr 28, 2009
---------------------------------------------------------------------
- Started to explore alternative approach to pagination (see Leads).

Mon, Apr 27, 2009
---------------------------------------------------------------------
- Initial implementation of on demand paging (Accounts only so far).
- Fixed SQLite incompatibilities (thanks, James!)
- Restructured pagination templates and added specs.

Sun, Apr 26, 2009
---------------------------------------------------------------------