@@ -1,5 +1,6 @@
 unless @leads.blank?
   page[:leads].replace_html render(:partial => "lead", :collection => @leads)
 else
-  page[:leads].replace_html "Cound't find #{h @query}" # STUB.
+  page[:leads].replace_html "Cound't find leads matching <b>#{h params[:query]}</b>"
 end
+page[:paginate].update ""
