@@ -1,3 +1,3 @@
-require 'lib/simple_column_search'
+require 'simple_column_search'
 
 ActiveRecord::Base.extend(SimpleColumnSearch)
