@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Thu, May 7, 2009
 ---------------------------------------------------------------------
 - Installed [simple_column_search] plugin.
+- Initial implementation of live search for Leads.
 
 Wed, May 6, 2009
 ---------------------------------------------------------------------
